--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,63 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     padding: 0px 0px 0px;
+    background-color: #141414;
+    position: relative;
 }
+
+header {
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    padding: 16px 5%;
+    font-size: 12px;
+}
+
+header img {
+    height: 28px;
+}
+
+header a {
+    text-decoration: none;
+    color: white;
+    margin-left: 16px;
+}
+  
+header button {
+    background: none;
+    color: white;
+    border: none;
+    margin-right: 16px;
+  }
+
+nav {
+    display: flex;
+    align-items: center;
+}
+  
+nav ul {
+    list-style: none;
+}
+  
+nav li {
+    display: inline-block;
+}
+  
+nav + nav {
+    margin-left: auto;
+}
+  
+.search {
+    margin-left: auto;
+}
+  
+.profile-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 4px;
+  }
 
 .feature {
     width: 100%;
@@ -31,6 +85,7 @@ body {
     max-height: calc(100vh - 120px);
     min-width: 100%;
     min-height: 100%;
+    z-index: -1;
 }
 
 .video-player {
@@ -66,6 +121,7 @@ body {
 .poster img {
     width: 150px;
     border-radius: 10px;
+    height: 230px;
 }
 
 .poster:hover {
